--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/java/controller/ImgUpController.java=UTF-8
 encoding//src/main/java/dao/UserDao.java=UTF-8
 encoding//src/main/java/service/Impl/UserServiceImpl.java=UTF-8
 encoding//src/main/java/service/UserService.java=UTF-8
